edited docs in category store method
